--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -4,7 +4,7 @@
   <div class="col-md-6">
     <h3>Address</h3>
     
-    <p>1281 W 2150 S, Syracuse, Ut 84075</p>
+    <p>1281 W 2150 S, Syracuse, UT 84075</p>
     
     <h3>Phone</h3>
     
