--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,2 +1,13 @@
 <h1>About Me</h1>
-<p>16</p>
+
+<hr>
+
+<div class="row">
+  <div class="col-md-4">
+    <%= image_tag "hold.png", width: 300, height: 300, alt: "profile image" %>
+  </div>
+  
+  <div class="col-md-8">
+    <p>16, currentky doing a coding bootcamp to build my skills</p>
+  </div>
+</div>
