added background image for application

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -9,5 +9,6 @@
   
   <div class="col-md-8">
     <p>16, currentky doing a coding bootcamp to build my skills</p>
+    <p>Image Credit <a href="http://Lemmino.deviantart.com">Lemmino.deviantart.com</a></p>
   </div>
 </div>
