--- a/app/views/portfolios/_form.html.erb
+++ b/app/views/portfolios/_form.html.erb
@@ -2,48 +2,46 @@
   <div class="row">
     <div class="col-md-6">
       <div class="form-group">
-        <%= f.label :title %>
-        <%= f.text_field :title, class: 'form-control' %>
+        <%= f.text_field :title, class: 'form-control', placeholder: 'Title' %>
       </div>
         
       <div class="form-group">
-        <%= f.label :subtitle %>
-        <%= f.text_field :subtitle, class: 'form-control' %>
+        <%= f.text_field :subtitle, class: 'form-control', placeholder: 'Subtitle' %>
       </div>
       <div class="form-group">
         <label class="btn btn-primary">
-          Upload main image <%= f.file_field :main_image, style: 'display:none;' %>
+          Upload Main Image <%= f.file_field :main_image, style: 'display:none;' %>
         </label>
       </div>
       <div class="form-group">
         <label class="btn btn-primary">
-          Upload thumbnail <%= f.file_field :thumb_image, style: 'display:none;' %>
+          Upload Thumbnail <%= f.file_field :thumb_image, style: 'display:none;' %>
         </label>
       </div>
     </div>
     
     <div class="col-md-6">
       <div class="form-group">
-        <%= f.label :body %>
-        <%= f.text_area :body, class: 'form-control', rows: 13 %>
+        <%= f.text_area :body, class: 'form-control', rows: 13, placeholder: 'Description' %>
       </div>
     </div>
   </div>
   
-    <hr>
-    <div class="col-md-12">
-      <h2>Technologies Used</h2>
+  <hr>
+  <div class="col-md-12">
+    <h2>Technologies Used</h2>
+    <div>
+      <%= f.fields_for :technologies do |technology_form| %>
+        <%= render 'technology_fields', f: technology_form %>
+      <% end %>
+      
       <div>
-        <%= f.fields_for :technologies do |technology_form| %>
-        <div class="form-group">
-          <%= technology_form.label :name %>
-          <%= technology_form.text_field :name, class: 'form-control' %>
-        </div>
-        <% end %>
-      </div>
-    
-      <div class="form-group">
-        <%= f.submit 'Save Portfolio File', class: 'btn btn-primary btn-block' %>
+        <%= link_to_add_association 'Add Technology', f, :technologies %>
       </div>
     </div>
-  <% end %>
+      
+    <div class="form-group">
+      <%= f.submit 'Save Portfolio File', class: 'btn btn-primary btn-block' %>
+    </div>
+  </div>
+<% end %>
