refactored alerts into helper methods

--- a/app/views/layouts/blog.html.erb
+++ b/app/views/layouts/blog.html.erb
@@ -29,7 +29,10 @@
       </div>
        
       <%= render 'shared/blog_footer' %>
-        <%= source_helper("blog") %>
+      
+      <%= alerts %>
+      
+      <%= source_helper("blog") %>
     </div>
   </body>
 </html>
