--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -8,7 +8,7 @@
   </div>
   
   <div class="col-md-8">
-    <p>16, currentky doing a coding bootcamp to build my skills</p>
+    <p>16, currently doing a coding bootcamp to build my skills</p>
     <p>Image Credit <a href="http://Lemmino.deviantart.com">Lemmino.deviantart.com</a></p>
   </div>
 </div>
