--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -158,7 +158,7 @@ body {
   .masthead,
   .mastfoot,
   .cover-container {
-    width: 55rem;
+    width: 65rem;
   }
 }
 
@@ -207,3 +207,20 @@ body {
  .app-footer{
    color: white;
  }
+ 
+ .tech-news {
+   color: black;
+   margin: 20px;
+ }
+ 
+ .tech-news a {
+   color:	#004599;
+ }
+ 
+ .tech-news > .card {
+   padding: 30px;
+ }
+ 
+ 
+ 
+ 
