--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -7,14 +7,5 @@
   <p><%= @blog.body %></p>
   <%= render @blog.comments %>
   
-  <% unless current_user.is_a? GuestUser %>
-    <%= form_for @comment, url: '#' do |f| %>
-      <div class="form-group">
-        <%= f.text_area :content, class: 'form-control', Placeholder: "Comment" %>
-      </div>
-    
-      <%= f.submit 'Post Comment', class: 'btn btn-primary' %>
-    <% end %>
-  <% end %>
-
+  <%= render 'comments/comment_form' %>
 </div>
