--- a/app/assets/stylesheets/blogs.scss
+++ b/app/assets/stylesheets/blogs.scss
@@ -50,6 +50,13 @@ h6, .h6 {
           box-shadow: inset 0 -.1rem .25rem rgba(0,0,0,.1);
 }
 
+.cbt {
+  font-family: Helvetica;
+  a {
+    color: #fff;
+  }
+}
+
 /* Nav links */
 .nav-link {
   position: relative;
@@ -190,4 +197,8 @@ h6, .h6 {
 
 .col-md-10 {
   font-family: "Helvetica";
+}
+
+.container {
+  font-family: Helvetica;
 }
