--- a/app/views/shared/_blog_sidebar.html.erb
+++ b/app/views/shared/_blog_sidebar.html.erb
@@ -3,6 +3,13 @@
     <h4>About</h4>
     <p>I Am a 17 year old Junior at Clearfield High School</p>
   </div>
+    
+  <div class="sidebar-module">
+    <h4>Topics</h4>
+    <% @set_sidebar_topics.each do |topic| %>
+      <p><%= link_to topic.title, topic_path(topic) %></p>
+    <% end %>
+  </div>
 
   <div class="sidebar-module">
     <h4>Links</h4>
