--- a/app/views/kaminari/_paginator.html.erb
+++ b/app/views/kaminari/_paginator.html.erb
@@ -3,7 +3,7 @@
 #nav td{padding:0;text-align:center}
 .cur {font-weight:bold}
 .csb {background:url(http://www.google.co.jp/images/srpr/nav_logo27.png) no-repeat;overflow:hidden;background-position:0 0;height:40px;display:block}
-#nav {font-family: arial,sans-serif; font-size:small}
+#nav {font-family: Helvetica,sans-serif; font-size:small}
 #nav a:link {text-decoration:none; color:#4496d3}
 #nav a:hover {text-decoration:underline}
 #nav a:active {color:#c11}
