Implemented partial for admin actions

--- a/app/views/blogs/_blog.html.erb
+++ b/app/views/blogs/_blog.html.erb
@@ -1,20 +1,8 @@
 <div class="blog-post">
   <h2 class="blog-post-title"><%= link_to blog.title.upcase, blog %></h2>
   <p class="blog-post-meta">Published <%= distance_of_time_in_words(blog.created_at, Time.now) %> ago</p>
-  
-  <% if logged_in?(:site_admin) %>
-    <div class="btn-group" role="group" aria-label="Basic example">
-      <button type="button" class="btn btn-custom btn-sm btn-outline-primary">
-        <%= link_to blog.status, toggle_status_blog_path(blog) %>
-      </button>
-      <button type="button" class="btn btn-custom btn-sm btn-outline-primary">
-        <%= link_to 'Edit', edit_blog_path(blog) %>
-      </button>
-      <button type="button" class="btn btn-custom btn-sm btn-outline-danger">
-        <%= link_to 'Delete Post', blog, method: :delete, data: { confirm: 'Are you sure?' } if logged_in?(:site_admin) %>
-      </button>
-    </div>
-  <% end %>
+
+  <%= render partial: 'blogs/admin_actions', locals: { blog: blog } %>
 
   <p>
     <%= markdown blog.body %>
