--- a/app/assets/stylesheets/blogs.scss
+++ b/app/assets/stylesheets/blogs.scss
@@ -198,7 +198,7 @@ h6, .h6 {
 }
 
 .col-md-10 {
-  font-family: "Helvetica";
+  font-family: Helvetica;
 }
 
 .container {
@@ -220,4 +220,8 @@ h6, .h6 {
 
 .ui.menu {
     font-size: 0.65rem;
+}
+
+.blog-nav {
+  margin-bottom: 30px;
 }
