--- a/app/views/shared/_blog_sidebar.html.erb
+++ b/app/views/shared/_blog_sidebar.html.erb
@@ -3,6 +3,8 @@
     <h4>About</h4>
     <p>I Am a 17 year old Junior at Clearfield High School</p>
   </div>
+  
+    <%= source_helper("alert alert-info blog-sidebar-source") %>
     
   <div class="sidebar-module">
     <h4>Topics</h4>
