--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,14 +1,18 @@
-<h1>About Me</h1>
-
-<hr>
-
-<div class="row">
-  <div class="col-md-4">
-    <%= image_tag "hold.png", width: 300, height: 300, alt: "profile image" %>
-  </div>
-  
-  <div class="col-md-8">
-    <p>16, currently doing a coding bootcamp to build my skills</p>
-    <p>Image Credit <a href="http://Lemmino.deviantart.com">Lemmino.deviantart.com</a></p>
+<div class="app-card-container">
+  <div class="card">
+    <h1>About Me</h1>
+    <hr>
+    <div class="row">
+      <div class="col-md-4">
+        <%= image_tag "hold.png", width: 300, height: 300, alt: "profile image", class: 'profile-img' %>
+      </div>
+      <div class="col-md-8">
+        <p>16, currently doing a coding bootcamp to build my skills</p>
+        <p>Image Credit <a href="http://Lemmino.deviantart.com">Lemmino.deviantart.com</a></p>
+      </div>
+    </div>
   </div>
 </div>
+
+
+
