--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,23 +1,27 @@
-<h1>Contact</h1>
-
-<div class="row">
-  <div class="col-md-6">
-    <h3>Address</h3>
+<div class="app-card-container">
+  <div class="card">
+    <h1>Contact me to work together</h1>
     
-    <p>1281 W 2150 S, Syracuse, UT 84075</p>
+    <div class="row">
+      <div class="col-md-6">
+        <h3>Address</h3>
+        
+        <p>1281 W 2150 S, Syracuse, UT 84075</p>
+        
+        <h3>Phone</h3>
+        
+        <p><%= number_to_phone "3076776294" %></p>
+        
+        <h3>Email</h3>
+        
+        <p><a href="mailto:Trighhorn@gmail.com?subject=PortfolioContact" "email me">Email me</a> </a></p>
+      </div>
     
-    <h3>Phone</h3>
     
-    <p><%= number_to_phone "3076776294" %></p>
     
-    <h3>Email</h3>
-    
-    <p><a href="mailto:Trighhorn@gmail.com?subject=PortfolioContact" "email me">Email me</a> </a></p>
-  </div>
-
-
-
-  <div class="col-md-6">
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3007.387098509126!2d-112.05305138602283!3d41.08238812281257!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x87531cab8090f8c9%3A0xea37cb97b9df1d36!2s1281+W+2150+S%2C+Syracuse%2C+UT+84075!5e0!3m2!1sen!2sus!4v1499696362811" width="250" height="250" frameborder="0" style="border:0" allowfullscreen></iframe>
+      <div class="col-md-6">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3007.387098509126!2d-112.05305138602283!3d41.08238812281257!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x87531cab8090f8c9%3A0xea37cb97b9df1d36!2s1281+W+2150+S%2C+Syracuse%2C+UT+84075!5e0!3m2!1sen!2sus!4v1499696362811" width="250" height="250" frameborder="0" style="border:0" allowfullscreen></iframe>
+      </div>
+    </div>
   </div>
 </div>
