Updated about page with collapsable components

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -9,6 +9,47 @@
       <div class="col-md-8">
         <p>16, currently doing a coding bootcamp to build my skills</p>
         <p>Image Credit <a href="http://Lemmino.deviantart.com">Lemmino.deviantart.com</a></p>
+        <p>
+          <button 
+            class="btn btn-primary"
+            type="button"
+            data-toggle="collapse"
+            data-target="#education"
+            aria-expanded="false"
+            aria-controler="education"
+          > Education </button>
+          
+          <button 
+            class="btn btn-primary"
+            type="button"
+            data-toggle="collapse"
+            data-target="#jobHistory"
+            aria-expanded="false"
+            aria-controler="jobHistory"
+          > Job History </button>
+        </p>
+        
+        <p>
+          <div class="collapse" id="education">
+            <div class="card card-block">
+              Clearfield highschool graduating class of 2019
+            </div>
+            <div class="card card-block">
+              Post secondary filler
+            </div>
+          </div>
+        </p>
+        
+        <p>
+          <div class="collapse" id="jobHistory">
+            <div class="card card-block">
+              none
+            </div>
+            <div class="card card-block">
+              filler
+            </div>
+          </div>
+        </p>
       </div>
     </div>
   </div>
