--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -5,6 +5,24 @@
     <div class="row">
       <div class="col-md-4">
         <%= image_tag "hold.png", width: 300, height: 300, alt: "profile image", class: 'profile-img' %>
+        <div class="skills">
+          <% @skills.each do |skill| %>
+            <div class="skill">
+            <h5><%= skill.title %></h5>
+              <div class="progress">
+                <div 
+                  class="progress-bar bg-success"
+                  role="progressbar"
+                  aria-valuenow="<%= skill.percent_utilized %>"
+                  aria-valuemax="100"
+                  style="width: <%= skill.percent_utilized %>%"
+                >
+                </div>
+                
+              </div>
+            </div>
+          <% end %>
+        </div>
       </div>
       <div class="col-md-8">
         <p>16, currently doing a coding bootcamp to build my skills</p>
